<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary">


            <ImageView
                    android:id="@+id/itemImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/collapsing_toolbar_height"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/test_image"
                    app:layout_collapseMode="parallax"
                    tools:ignore="ContentDescription"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarDetails"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_large">

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal">

                <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item_lifeTime"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>


                    <ProgressBar
                            android:id="@+id/progressBarLifeTime"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="@dimen/spacing_normal"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                            android:id="@+id/tvItemCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_normal"
                            tools:text="Groceries"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item_description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                            android:id="@+id/tvItemDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lorem_ipsum"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCallOwner"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|end"
            android:src="@android:drawable/ic_menu_call"
            android:layout_margin="@dimen/spacing_normal"/>
</android.support.design.widget.CoordinatorLayout>